--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
+        "php-ffmpeg/php-ffmpeg": "^1.2",
         "tymon/jwt-auth": "2.0.0"
     },
     "require-dev": {
