--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
         "php-ffmpeg/php-ffmpeg": "^1.2",
+        "realrashid/sweet-alert": "^7.1",
         "tymon/jwt-auth": "2.0.0"
     },
     "require-dev": {
